T-Rex jQuery reference fix and table alignment

--- a/stylesheets/style_eco.css
+++ b/stylesheets/style_eco.css
@@ -1075,7 +1075,7 @@ ul.nobullet {
   margin-left: 30px;
   text-align: left;
 }
-.articles_output h3,h4 {
+h3,h4.articles_output {
   text-align: left;
   margin: 8px 0 4px 30px;
 }
